--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "private-blog-v4",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
-  "dependencies": {
-    "@react-router/node": "^7.4.1",
-    "@react-router/serve": "^7.4.1",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router": "^7.4.1"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.4.1",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "^22",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "react-router-devtools": "^1.1.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.2.4",
-    "vite-tsconfig-paths": "^5.1.4"
-  }
+	"name": "private-blog-v4",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "react-router build",
+		"dev": "react-router dev",
+		"start": "react-router-serve ./build/server/index.js",
+		"typecheck": "react-router typegen && tsc",
+		"lint": "bunx biome check",
+		"format": "bunx biome check --write "
+	},
+	"dependencies": {
+		"@react-router/node": "^7.4.1",
+		"@react-router/serve": "^7.4.1",
+		"isbot": "^5.1.17",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-router": "^7.4.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@react-router/dev": "^7.4.1",
+		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^22",
+		"@types/react": "^19.0.1",
+		"@types/react-dom": "^19.0.1",
+		"react-router-devtools": "^1.1.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.7.2",
+		"vite": "^6.2.4",
+		"vite-tsconfig-paths": "^5.1.4"
+	}
 }
