ci: GitHub Actionsの依存関係更新スケジュールを追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -64,3 +64,12 @@ updates:
         update-types:
           - "minor"
           - "patch"
+
+  - package-ecosystem: "github-actions"
+    directory: "/.github/workflows"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      prefix-development: "dev-deps"
+      include: "scope"
