--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"dependencies": {
 		"@react-router/node": "^7.4.1",
 		"@react-router/serve": "^7.4.1",
+		"@zag-js/react": "^1.7.0",
+		"@zag-js/tooltip": "^1.7.0",
 		"isbot": "^5.1.17",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
