--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"knip": "knip"
 	},
 	"dependencies": {
+		"@ark-ui/react": "^5.4.0",
 		"@react-router/node": "^7.4.1",
 		"@react-router/serve": "^7.4.1",
 		"@zag-js/react": "^1.7.0",
