fix: PandaCSSの設定を更新

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
 		"**/*",
 		"**/.server/**/*",
 		"**/.client/**/*",
-		".react-router/types/**/*"
+		".react-router/types/**/*",
+		"app",
+		"styled-system"
 	],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ES2022"],
