fix: dependabot.ymlに@ark-ui/reactを追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,7 @@ updates:
       ui-libraries:
         patterns:
           - "@pandacss/dev"
+          - "@ark-ui/react"
 
       # ビルドツール関連
       build-tools:
