feat: ホームページのレイアウトを更新し、autoprefixerとpostcssを追加

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"@types/node": "^22.13.17",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.1",
+		"autoprefixer": "^10.4.21",
 		"knip": "^5.46.5",
+		"postcss": "^8.5.3",
 		"react-router-devtools": "^1.1.0",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.4",
