fix: 静的解析としてBiomeとKnipを一括実行

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,14 +18,10 @@ jobs:
         - name: Install dependencies
           run: bun install
 
-        # BiomeによるLint
+        # BiomeとKnipによる静的解析
         - name: Run Bun lint
           run: bun lint
 
         # React RouterとTSCによる型チェック
         - name: Run TypeCheck
           run: bun typecheck
-
-        # Knipによる未使用依存関係、ファイル、エクスポートの検出
-        - name: Run Knip
-          run: bun knip
