feat: lucide-reactを追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -30,6 +30,7 @@ updates:
           - "@pandacss/dev"
           - "@ark-ui/react"
           - "@park-ui/panda-preset"
+          - "lucide-react"
 
       # ビルドツール関連
       build-tools:
