fix: lintスクリプトからknipを削除

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "react-router-serve ./build/server/index.js",
 		"prepare": "panda codegen",
 		"typecheck": "react-router typegen && tsc",
-		"lint": "bunx biome check && knip",
+		"lint": "bunx biome check",
 		"format": "bunx biome check --write && knip"
 	},
 	"dependencies": {
