--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 		"prepare": "panda codegen",
 		"typecheck": "react-router typegen && tsc",
 		"lint": "bunx biome check",
-		"format": "bunx biome check --write && knip"
+		"format": "bunx biome check --write && knip",
+		"deploy": "wrangler deploy",
+		"deploy:dev": "wrangler deploy --env development",
+		"preview": "wrangler dev --local",
+		"build:deploy": "npm run build && npm run deploy"
 	},
 	"dependencies": {
 		"@ark-ui/react": "^5.4.0",
@@ -23,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@cloudflare/vite-plugin": "^1.0.0",
 		"@pandacss/dev": "^0.53.3",
 		"@park-ui/panda-preset": "^0.43.1",
 		"@react-router/dev": "^7.4.1",
@@ -33,6 +38,7 @@
 		"react-router-devtools": "^1.1.0",
 		"typescript": "^5.8.2",
 		"vite": "^6.2.4",
-		"vite-tsconfig-paths": "^5.1.4"
+		"vite-tsconfig-paths": "^5.1.4",
+		"wrangler": "^4.7.2"
 	}
 }
