feat: cloudlare関連を個別に追加

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -43,6 +43,12 @@ updates:
           - "typescript"
           - "@types/node"
 
+      # Cloudflare関連依存
+      cloudflare:
+        patterns:
+          - "wrangler"
+          - "@cloudflare/vite-plugin"
+
       # その他のユーティリティ
       utils:
         patterns:
