--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy to Cloudflare Workers
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+ pull_request:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   deploy:
