--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
 		"lint": "bunx biome check",
 		"format": "bunx biome check --write && knip",
 		"deploy": "wrangler deploy",
-		"deploy:dev": "wrangler deploy --env development",
+		"build:deploy": "bun run build && bun run deploy",
 		"preview": "wrangler dev --local",
-		"build:deploy": "npm run build && npm run deploy"
+		"preview:build": "bun run build && wrangler dev"
 	},
 	"dependencies": {
 		"@ark-ui/react": "^5.4.0",
