fix: 除外ファイル設定

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": ["node_modules", "styled-system", ".vite", ".react-router"]
+		"ignore": [
+			"node_modules",
+			"styled-system",
+			".vite",
+			".react-router",
+			"build",
+			".wrangler"
+		]
 	},
 	"formatter": {
 		"enabled": true,
