chore: モノレポ対応のため、ディレクトリを変更

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: "bun"
-    directory: "/"
+    directory: "/blog"
     schedule:
       interval: "weekly"
     commit-message:
