--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,6 +6,10 @@ on:
 jobs:
     lint:
         runs-on: ubuntu-latest
+        defaults:
+          run:
+            working-directory: blog
+
         steps:
         - name: Checkout code
           uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
