feat: NotionConverterに新しい依存関係を追加し、依存関係の更新スケジュールを設定

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -63,3 +63,12 @@ updates:
       prefix: "deps"
       prefix-development: "dev-deps"
       include: "scope"
+
+  - package-ecosystem: "bun"
+    directory: "/tools/NotionConverter"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "deps:notion-converter"
+      prefix-development: "dev-deps:notion-converter"
+      include: "scope"
