--- a/tools/NotionConverter/package.json
+++ b/tools/NotionConverter/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notion-md-converter/core": "0.9.0",
     "@notion-md-converter/types": "0.9.0",
+    "@notion-md-converter/zenn": "^0.9.0",
     "dotenv": "^16.4.7"
   }
 }
