--- a/blog/tsconfig.json
+++ b/blog/tsconfig.json
@@ -1,41 +1,29 @@
 {
-    "include": [
-        "**/*",
-        "**/.server/**/*",
-        "**/.client/**/*",
-        "blog/.react-router/types/**/*",
-        "blog/app",
-        "styled-system"
-    ],
-    "compilerOptions": {
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ES2022"
-        ],
-        "types": [
-            "node",
-            "vite/client"
-        ],
-        "target": "ES2022",
-        "module": "ES2022",
-        "moduleResolution": "bundler",
-        "jsx": "react-jsx",
-        "rootDirs": [
-            ".",
-            "blog/.react-router/types"
-        ],
-        "baseUrl": ".",
-        "paths": {
-            "~/*": [
-                "blog/app/*"
-            ]
-        },
-        "esModuleInterop": true,
-        "verbatimModuleSyntax": true,
-        "noEmit": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": true
-    }
+	"include": [
+		"**/*",
+		"**/.server/**/*",
+		"**/.client/**/*",
+		"blog/.react-router/types/**/*",
+		"blog/app",
+		"styled-system"
+	],
+	"compilerOptions": {
+		"lib": ["DOM", "DOM.Iterable", "ES2022"],
+		"types": ["node", "vite/client"],
+		"target": "ES2022",
+		"module": "ES2022",
+		"moduleResolution": "bundler",
+		"jsx": "react-jsx",
+		"rootDirs": [".", "blog/.react-router/types"],
+		"baseUrl": ".",
+		"paths": {
+			"~/*": ["blog/app/*"]
+		},
+		"esModuleInterop": true,
+		"verbatimModuleSyntax": true,
+		"noEmit": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": true
+	}
 }
