--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,18 +14,15 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-        - name: Set up Bun
-          uses: oven-sh/setup-bun@54cb141c5c91e2fdc396be3155a391f28e1822eb # v2.0.1
+        - name: Set up Node.js
+          uses: actions/setup-node@cdca7365b2dadb8aad0a33bc7601856ffabcc48e # v4.3.0
           with:
-            bun-version: latest
+            node-version: '22'
+            cache: 'npm'
 
         - name: Install dependencies
-          run: bun install
+          run: npm ci
 
-        # BiomeとKnipによる静的解析
+        # 静的解析
         - name: Run Bun lint
-          run: bun lint
-
-        # React RouterとTSCによる型チェック
-        - name: Run TypeCheck
-          run: bun typecheck
+          run: npm run lint
