--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,7 @@ jobs:
           with:
             node-version: '22'
             cache: 'npm'
+            cache-dependency-path: 'blog/package-lock.json'
 
         - name: Install dependencies
           run: npm ci
