--- a/tools/NotionConverter/package.json
+++ b/tools/NotionConverter/package.json
@@ -13,6 +13,7 @@
     "@notion-md-converter/core": "0.9.0",
     "@notion-md-converter/types": "0.9.0",
     "@notion-md-converter/zenn": "^0.9.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7"
   }
 }
