feat: assetsディレクトリの設定を追加

--- a/blog/wrangler.jsonc
+++ b/blog/wrangler.jsonc
@@ -12,6 +12,9 @@
     },
     "observability": {
         "enabled": true
+    },
+    "assets": {
+        "directory": "./build",
     }
     /**
 	 * Smart Placement
