fix: loader関数からCloudflareの値を削除し、biome設定にbuildを追加

--- a/blog/biome.json
+++ b/blog/biome.json
@@ -16,7 +16,8 @@
 			"*.config.*",
 			"wrangler.jsonc",
 			"worker-configuration.d.ts",
-			"*.css"
+			"*.css",
+			"build"
 		]
 	},
 	"formatter": {
